style: pop up style fix + text truncate now in css

--- a/VedaVersum.Frontend/src/views/components/styles/popup.scss
+++ b/VedaVersum.Frontend/src/views/components/styles/popup.scss
@@ -1,6 +1,6 @@
 .popup-content {
   width: 75%;
-  padding: 0;
-  border: none;
+  padding: 0 !important;
+  border: none !important;
   border-radius: 0.5rem;
 }
